--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/antler-icon.webp" />
     <link rel="irl-manifest" href="/irl-manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello World</title>
+    <title>Welcome to ZSpace</title>
   </head>
   <body>
     <div id="app"></div>
